# FUEL

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.sh  fuzz.sh  pyproject.toml
config/: heuristic.yaml  model.yaml
config/als_prompt/: pytorch.yaml
config/gen_prompt/: pytorch.yaml
config/model/: deepseek.yaml  kimi.yaml
data/: pytorch_apis.txt  pytorch_crawler.py  pytorch_operators.txt  tensorflow_apis.txt  tensorflow_crawler.py  tensorflow_operators.txt  tensorflow_xla_raw_operators.txt  torch_linalg.txt
experiments/: .coveragerc  collect_code_coverage.py  tensorflow_utils.py  torch_utils.py  utils.py
fuel/: fuzz.py  model.py
fuel/difftesting/: common.py  difftesting.py  oracle.py  validate_base.py  validate_target.py
fuel/exec/: exec_template.py  render_code.py  utils.py
fuel/feedback/: execution_status.py  feedback.py
fuel/guidance/: FASA.py  Random.py  SA.py
fuel/utils/: Filer.py  config_manager.py  fuzzing_core.py  model_manager.py  prompt_handler.py  prompt_loader.py  util.py
model_config/: deepseek.yaml  gpt.yaml  kimi.yaml  qwen.yaml
prompts/: BUG_EXCEPTION_SEPARATION.md  README.md
prompts/als/: cov_als.md  failure_bug.md  failure_exception.md  system.md
prompts/als/examples/bug_example1/: bug.md  code.md
prompts/als/examples/bug_example2/: bug.md
prompts/als/examples/coverage_example1/: analysis.md  code.md  coverage.md
prompts/als/examples/coverage_example2/: analysis.md  coverage.md
prompts/als/examples/exception_example1/: exception.md
