[project]
name = "fuelagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astunparse>=1.6.3",
    "click>=8.2.1",
    "coverage>=7.8.1",
    "huggingface-hub>=0.31.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai>=1.81.0",
    "pre-commit>=4.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.2",
]

[project.scripts]
fuel = "fuel.fuzz:cli"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["**/*"]

[tool.ruff]
target-version = "py312"
fix = true
exclude = [
    "baselines/"
]

[tool.ruff.lint]
extend-select = ["I"]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
